--- a/index.html
+++ b/index.html
@@ -35,25 +35,35 @@
       box-sizing: border-box;
       position: relative;
     }
+    .logo-main {
+      width: 106px;
+      height: 106px;
+      display: block;
+      margin: 24px auto 12px;
+      border-radius: 29px;
+      background: var(--logo-bg);
+      box-shadow: 0 2px 24px #d4e8ff60;
+      padding: 16px;
+      object-fit: contain;
+    }
     .search-wrap {
       width: 100%;
       max-width: 430px;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 0 auto 6px;
-      padding-top: 10px;
+      margin: 0 auto 7px;
     }
     .search-inp {
       width: 100%;
-      font-size: 15px;
-      padding: 8px 13px;
+      font-size: 17px;
+      padding: 13px 15px;
       border-radius: 13px;
       border: 1px solid #d7e4f5;
       outline: none;
       background: #f6faff;
       box-sizing: border-box;
-      margin-bottom: 2px;
+      margin-bottom: 7px;
       margin-top: 0;
     }
     .ads-container-outer {
@@ -69,16 +79,15 @@
       max-width: 430px;
       margin: 0 auto;
       background: var(--card-bg);
-      border-radius: 19px 19px 0 0;
+      border-radius: 20px;
       box-shadow: 0 2px 24px #e3effc38;
-      padding: 5px 0 0 0;
+      padding: 13px 0 0 0;
       overflow-y: auto;
       min-height: 210px;
       max-height: 62vh;
       position: relative;
       display: flex;
       flex-direction: column;
-      margin-bottom: 75px;
       scrollbar-width: thin;
       scrollbar-color: #acd4ff #fff;
     }
@@ -87,24 +96,18 @@
       padding: 0 10px 10px 10px;
       box-sizing: border-box;
       margin: 0;
-      display: flex;
-      flex-direction: column;
-      gap: 9px;
     }
     .ad-card {
       background: #fafdff;
       border-radius: 13px;
-      padding: 12px 12px 7px 12px;
+      padding: 14px 14px 8px 14px;
+      margin-bottom: 13px;
       box-shadow: 0 1px 7px #dbe3f324;
       text-align: left;
-      display: flex;
-      flex-direction: column;
-      gap: 3px;
-      word-break: break-word;
     }
     .ad-title {
       font-size: 16px;
-      margin-bottom: 2px;
+      margin-bottom: 4px;
       font-weight: 600;
       color: #194d8f;
       word-break: break-word;
@@ -112,7 +115,7 @@
     .ad-meta {
       font-size: 14px;
       color: #3167ae;
-      margin-bottom: 2px;
+      margin-bottom: 3px;
       word-break: break-all;
     }
     .ad-meta2 {
@@ -122,24 +125,14 @@
     .ad-geo {
       font-size: 13px;
       color: #46a54d;
-      margin-bottom: 2px;
-    }
-    .ad-img {
-      max-width: 115px;
-      max-height: 85px;
-      margin-bottom: 5px;
-      border-radius: 7px;
-      background: #dde5ef;
-      object-fit: cover;
-      box-shadow: 0 2px 10px #acd4ff1a;
-      display: block;
+      margin-bottom: 3px;
     }
     .add-btn-main {
       background: var(--primary);
       color: #fff;
       border: none;
       font-weight: 700;
-      font-size: 1.09em;
+      font-size: 1.14em;
       padding: 15px 18px 15px 18px;
       border-radius: 17px 17px 0 0;
       margin: 0 auto;
@@ -166,22 +159,22 @@
       border-radius: 22px;
       box-shadow: 0 6px 32px #b1d6fc45;
       width: 335px;
-      padding: 18px 14px 9px;
+      padding: 26px 18px 12px;
       text-align: left;
       animation: popin .5s;
       margin: 0 auto;
     }
     @keyframes popin { 0% { transform: scale(.91); opacity: 0; } 100% { transform: scale(1); opacity: 1; } }
     .modal-card h2 {
-      font-size: 18px; margin: 0 0 13px; font-weight: 700;
+      font-size: 18px; margin: 0 0 16px; font-weight: 700;
       color: #174ea6;
       text-align: center;
     }
-    .modal-field { margin-bottom: 12px; }
+    .modal-field { margin-bottom: 16px; }
     .modal-field input, .modal-field textarea {
       width: 100%;
       font-size: 15px;
-      padding: 8px 9px;
+      padding: 9px 9px;
       border-radius: 8px;
       border: 1px solid #d7e4f5;
       outline: none;
@@ -200,20 +193,6 @@
       color: #1c5;
       cursor: pointer;
       font-weight: 600;
-    }
-    .geo-field {
-      font-size: 13px;
-      color: #36b;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      margin: 7px 0 3px 0;
-    }
-    .geo-ok {
-      color:#1c5;
-      font-size:13px;
-      margin-left:8px;
-      display:none;
     }
     .modal-btns {
       display: flex;
@@ -256,6 +235,7 @@
     .msg.show { opacity: 1; }
     .fadein { animation: fadeIn .8s; }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    /* Прелоадер */
     .preloader-bg {
       position: fixed;
       z-index: 99;
@@ -269,8 +249,8 @@
       transition: .5s;
     }
     .preloader-logo {
-      width: 220px;
-      margin-bottom: 40px;
+      width: 180px;
+      margin-bottom: 45px;
       margin-top: -60px;
       border-radius: 36px;
       background: var(--logo-bg);
@@ -278,11 +258,11 @@
       object-fit: contain;
     }
     .loader-bar-wrap {
-      width: 165px; height: 7px;
+      width: 210px; height: 12px;
       background: #e3eefe;
       border-radius: 8px;
       overflow: hidden;
-      margin-bottom: 36px;
+      margin-bottom: 40px;
     }
     .loader-bar {
       height: 100%; width: 0;
@@ -292,12 +272,12 @@
     }
     @media (max-width:500px) {
       .main-app { min-height: 100vh; }
-      .ads-window { max-width: 99vw;}
+      .ads-window { max-width: 99vw; }
       .add-btn-main { max-width: 100vw; font-size: 1em;}
       .search-wrap, .ads-window { max-width: 99vw;}
       .preloader-bg { padding-bottom: 100px; }
-      .preloader-logo { width: 59vw; }
-      .loader-bar-wrap { width: 49vw;}
+      .preloader-logo { width: 43vw; }
+      .loader-bar-wrap { width: 65vw;}
       .modal-card { width: 97vw; min-width: 0;}
     }
   </style>
@@ -311,6 +291,7 @@
     </div>
   </div>
   <div class="main-app fadein" id="main-app" style="visibility:hidden;">
+    <img src="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png" class="logo-main" />
     <div class="search-wrap">
       <input type="text" id="search-inp" class="search-inp" placeholder="Пошук по завданням..." autocomplete="off"/>
     </div>
@@ -326,18 +307,14 @@
     <div class="modal-card">
       <h2>Додати оголошення</h2>
       <form id="add-form" autocomplete="off">
-        <div class="modal-field"><input type="text" id="task-name" placeholder="Ваше ім'я" maxlength="20"></div>
         <div class="modal-field"><textarea id="task-desc" placeholder="Опишіть завдання..." required minlength="10"></textarea></div>
-        <div class="modal-field"><input type="number" min="1" id="task-price" placeholder="Ціна, грн"></div>
+        <div class="modal-field"><input type="number" min="0" id="task-price" placeholder="Ціна, грн" required></div>
         <div class="modal-field"><input type="tel" id="task-phone" placeholder="Телефон" required></div>
-        <div class="modal-field geo-field">
+        <div class="modal-field">
           <button type="button" class="geo-btn" id="geo-btn">Додати геолокацію</button>
-          <span class="geo-ok" id="geo-ok">✔ Додано</span>
+          <span id="geo-ok" style="color:#1c5; font-size:13px; display:none;">✔ Додано</span>
         </div>
         <input type="hidden" id="task-geo">
-        <div class="modal-field">
-          <input type="file" id="task-img" accept="image/*" style="background:#fafdff;"/>
-        </div>
         <div class="modal-btns">
           <button type="button" class="modal-btn cancel" id="cancel-modal">Скасувати</button>
           <button type="submit" class="modal-btn">Опублікувати</button>
@@ -347,11 +324,9 @@
   </div>
   <div class="msg" id="msg"></div>
   <script>
-    // --- SheetDB ---
+    // SheetDB API
     const SHEETDB_API = "https://sheetdb.io/api/v1/yb0rninf8e5x0";
     let adsCache = [];
-    let lastAdTime = +(localStorage.lastAdTime || 0);
-
     function $(x) {return document.getElementById(x);}
     function showMsg(txt) {
       $('msg').textContent = txt;
@@ -362,16 +337,9 @@
       let p = phone.replace(/\D/g, '');
       return (/^380\d{9}$/.test(p) || /^0\d{9}$/.test(p));
     }
-    // --- Фильтрация мата и ссылок ---
-    const BAD_WORDS = ["хуй","пизд","еба","єба","бляд","сука","fuck","shit"];
-    function hasBadWords(txt){
-      txt = (txt||"").toLowerCase();
-      return BAD_WORDS.some(w=>txt.includes(w));
+    function escapeHtml(t) {
+      return t ? t.replace(/[&<>"']/g,function(m){return({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'})[m];}) : '';
     }
-    function hasLinks(txt) {
-      return /(https?:\/\/|www\.|\.ru|\.ua|\.com|tg:|t\.me|@)/i.test(txt);
-    }
-    // --- Отрисовка объявлений ---
     function renderAds(filter='') {
       fetch(SHEETDB_API)
         .then(resp=>resp.json())
@@ -383,116 +351,95 @@
     function updateAds(filter='') {
       let ads = adsCache;
       let wrap = $('ads-list');
+      // фильтрация
       if(filter) {
         const q = filter.toLowerCase();
         ads = ads.filter(ad=>
           (ad.desc||'').toLowerCase().includes(q) ||
           (ad.price||'').toLowerCase().includes(q) ||
           (ad.phone||'').toLowerCase().includes(q) ||
-          (ad.geo||'').toLowerCase().includes(q) ||
-          (ad.name||'').toLowerCase().includes(q)
+          (ad.geo||'').toLowerCase().includes(q)
         );
       }
       if(!ads.length) {
         wrap.innerHTML = '<div style="text-align:center;color:#8a8c9b;">Оголошень ще немає...</div>';
         return;
       }
+      // показываем от старых к новым (новые внизу)
       wrap.innerHTML = '';
-      // Отображаем снизу вверх (новые внизу!)
       ads.forEach(ad=>{
-        let price = (ad.price && ad.price !== "undefined") ? ad.price : '—';
+        let price = (ad.price && ad.price !== "undefined") ? escapeHtml(ad.price) : '—';
         let geoHTML = ad.geo ? `<div class="ad-geo"><a href="https://maps.google.com/?q=${ad.geo}" target="_blank" style="color:#26a;text-decoration:underline;">📍 Геолокація</a></div>` : '';
-        let imgHTML = ad.img ? `<img src="${ad.img}" class="ad-img"/>` : '';
         let adHTML = `<div class="ad-card">
-              <div class="ad-title">${imgHTML}${ad.desc||''}</div>
-              <div class="ad-meta">👤 <b>${ad.name||'Анонім'}</b> | 💰 <b>${price}</b> грн | ${ad.phone||''}</div>
+              <div class="ad-title">${escapeHtml(ad.desc||'')}</div>
+              <div class="ad-meta">💰 <b>${price}</b> грн | ${escapeHtml(ad.phone||'')}</div>
               ${geoHTML}
-              <div class="ad-meta2">${ad.time||''}</div>
+              <div class="ad-meta2">${escapeHtml(ad.time||'')}</div>
             </div>`;
-        wrap.innerHTML = adHTML + wrap.innerHTML;
+        wrap.innerHTML += adHTML;
       });
+      // Скроллим вниз к последнему объявлению
       setTimeout(()=>{$('ads-window').scrollTop = $('ads-window').scrollHeight;},60);
     }
-    $('search-inp').oninput = e=>updateAds(e.target.value);
-    // --- Кнопка добавления ---
-    $('add-btn').onclick = ()=>{$('add-modal').classList.add('show');};
-    $('cancel-modal').onclick = ()=>{$('add-modal').classList.remove('show');$('add-form').reset();$('geo-ok').style.display='none';};
-    // --- Гео ---
-    $('geo-btn').onclick = function(){
-      if (navigator.geolocation) {
+    $('search-inp').oninput = function(){ updateAds(this.value); };
+    $('add-btn').onclick = ()=>{ $('add-modal').classList.add('show'); };
+    $('cancel-modal').onclick = ()=>{ $('add-modal').classList.remove('show'); $('add-form').reset();$('geo-ok').style.display='none';$('task-geo').value='';};
+    // Геолокация
+    $('geo-btn').onclick = function(e){
+      e.preventDefault();
+      if(navigator.geolocation){
         navigator.geolocation.getCurrentPosition(function(pos){
-          let geo = pos.coords.latitude + "," + pos.coords.longitude;
-          $('task-geo').value = geo;
-          $('geo-ok').style.display='inline-block';
-        }, function(){
-          showMsg('Не вдалося отримати геолокацію!');
-        });
-      } else {
-        showMsg('Ваш браузер не підтримує геолокацію');
-      }
+          let coords = pos.coords.latitude+','+pos.coords.longitude;
+          $('task-geo').value = coords;
+          $('geo-ok').style.display='inline';
+        },function(){ showMsg('Не вдалося отримати геолокацію!'); });
+      }else showMsg('Браузер не підтримує геолокацію.');
     };
-    // --- Сабмит формы ---
     $('add-form').onsubmit = function(e){
       e.preventDefault();
-      let now = Date.now();
-      if(now - lastAdTime < 25000) {
-        showMsg("Занадто часто! Спробуйте ще раз за 10 сек");
-        return;
-      }
-      let name = $('task-name').value.trim().replace(/[<>&"]/g,"");
-      let desc = $('task-desc').value.trim();
-      let price = $('task-price').value.trim();
-      let phone = $('task-phone').value.replace(/\D/g,'');
-      let geo = $('task-geo').value.trim();
-      let file = $('task-img').files[0];
-      if(name && (hasLinks(name)||hasBadWords(name))) { showMsg("Ім'я не має містити посилань або нецензурних слів"); return;}
-      if(desc.length<10) { showMsg('Опис має бути не менше 10 символів'); return;}
-      if(hasLinks(desc)||hasBadWords(desc)) { showMsg('Опис не повинен містити посилань або нецензурних слів'); return;}
-      if(!phone||!validUAphone(phone)) { showMsg('Вкажіть коректний номер телефону'); return;}
-      if(price && (isNaN(price)||+price<1||price.length>7)) { showMsg('Вкажіть коректну ціну'); return;}
-      let time = new Date().toLocaleString('uk-UA', {day:'2-digit', month:'2-digit', year:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'});
-      let data = {name,desc,price,phone,time,geo,img:""};
-      if(file) {
-        if(!file.type.startsWith('image/')){showMsg('Фото повинно бути зображенням');return;}
-        let reader = new FileReader();
-        reader.onload = function(e){
-          data.img = e.target.result;
-          sendAd(data);
-        };
-        reader.readAsDataURL(file);
-      } else {
-        sendAd(data);
-      }
-      lastAdTime = now;
-      localStorage.lastAdTime = now;
-    };
-    function sendAd(data){
+      let desc=$('task-desc').value.trim(),price=$('task-price').value.trim(),phone=$('task-phone').value.trim(),geo=$('task-geo').value;
+      if(desc.length<10)return showMsg('Опис має бути від 10 символів!');
+      if(!validUAphone(phone))return showMsg('Телефон некоректний!');
+      let ad = {
+        desc: desc,
+        price: price,
+        phone: phone,
+        time: new Date().toLocaleString("uk-UA"),
+        geo: geo
+      };
       fetch(SHEETDB_API, {
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body:JSON.stringify({data})
-      }).then(res=>res.json())
+        method: "POST",
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({data: ad})
+      }).then(resp=>resp.json())
         .then(()=>{
-          $('add-form').reset();$('add-modal').classList.remove('show');$('geo-ok').style.display='none';$('task-geo').value='';
+          $('add-modal').classList.remove('show');
+          $('add-form').reset();
+          $('geo-ok').style.display='none';
+          $('task-geo').value='';
           showMsg('Оголошення додано!');
-          setTimeout(()=>renderAds(),600);
+          setTimeout(renderAds,500);
         });
-    }
-    // --- Прелоадер ---
-    let p = 0, bar = $('loader-bar');
-    function preloadAnim(){
-      p+=15;
-      if(p>100)p=100;
-      bar.style.width=p+"%";
-      if(p<100) setTimeout(preloadAnim,250);
-    }
-    preloadAnim();
-    setTimeout(()=>{
-      $('preloader').style.opacity=0;
-      setTimeout(()=>{$('preloader').style.display="none";$('main-app').style.visibility="visible";},600);
-      renderAds();
-      setInterval(()=>renderAds($('search-inp').value),6000);
-    },5000);
+    };
+    // Loader
+    let loaderVal=0, loaderInt=setInterval(()=>{
+      loaderVal+=7+Math.random()*8;
+      if(loaderVal>=100)loaderVal=100;
+      $('loader-bar').style.width=loaderVal+'%';
+      if(loaderVal==100){
+        clearInterval(loaderInt);
+        setTimeout(()=>{
+          $('preloader').style.display='none';
+          $('main-app').style.visibility='visible';
+          renderAds();
+          setInterval(renderAds, 3500);
+        },400);
+      }
+    },95);
+    // Фикс скролла — только в ads-window!
+    document.body.style.overflow = "hidden";
+    $('ads-window').addEventListener('touchmove',e=>{e.stopPropagation();});
+    $('ads-window').addEventListener('wheel',e=>{e.stopPropagation();});
   </script>
 </body>
 </html>
